--- a/lab4/Lab4_FPGA_Template/DE0_NANO.qsf
+++ b/lab4/Lab4_FPGA_Template/DE0_NANO.qsf
@@ -394,4 +394,5 @@ set_global_assignment -name VERILOG_FILE Dual_Port_RAM_M9K.v
 set_global_assignment -name VERILOG_FILE IMAGE_PROCESSOR.v
 set_global_assignment -name QIP_FILE sweetPLL.qip
 set_global_assignment -name VERILOG_FILE IMAGE_PROCESSOR_COUNT.v
+set_global_assignment -name VERILOG_FILE UPDATE.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
